--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@
 VITE_APP_NAME="My React App"
 VITE_I18N_DEBBUG=true
 VITE_API_GRAPHQL_BASE_URL=https://beta.pokeapi.co/graphql/v1beta
+VITE_API_SPRITES_BASE_URL=https://raw.githubusercontent.com/PokeAPI/sprites/master
 VITE_API_POKEMONTCG_BASE_URL=https://api.pokemontcg.io/v2/cards
